assets/css/style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: Geneva, Arial, "Times New Roman";
  font-size: 18px;
}

/* Allow smooth scrolling. */
html {
    scroll-behavior: smooth;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-image: linear-gradient(#003360 61%, white);
}

.name {
  display: inline-flex;
}

h1 {
  font-family: Candara, Optima, Calibri;
  font-size: 56px;
  color: #b9c6ae;
  margin-left: 0px;
  margin-top: 0px;
}

.navigation {
  margin-bottom: -171px;
}

nav ul {
  list-style-type: none;
}

nav ul li {
  display: inline-block;
  margin: 10px;
}

a {
  font-family: Candara, Optima, Calibri;
  color: black;
  font-size: 28px;
}

#profile {
  border-radius: 360px;
  border: #b9c6ae;
  padding: 3px;
  width: 250px;
  height: 250px;
}

/* Places sections with headers on left and content on right */
.about,
.work,
.contact {
  display: inline-flex;
}

.about h2,
.work h2,
.contact h2 {
  min-width: 250px;
  text-align: right;
  padding-right: 10px;
  font-size: 22px;
}

h2 {
  font-family: Candara, Optima, Calibri;
}

/* Adds border to left of content. */
.about div,
.contact div {
  display: flex;
  width: initial;
  padding-left: 10px;
  border-left: solid;
  text-align: left;
  font-size: 14px;
}

.work img {
  border: solid;
}

/* Wraps application images when change screen width. */
.application {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  border-left: solid;
  padding-left: 10px;
}

.application img {
    width: 100%;
    height: 100%;
}

.refractor,
.app2,
.app3,
.app4,
.app5 {
  position: relative;
  font-family: Candara, Optima, Calibri;
}

#refractor,
#app2,
#app3,
#app4,
#app5 {
  position: absolute;
  bottom: 20px;
  left: 20px;
  background-color: #003360;
  color: #b9c6ae;
  padding: 15px;
}

h3 {
  font-family: Candara, Optima, Calibri;
}

.contact div {
    display: inline-flex;
    justify-content: space-evenly;
    align-content: flex-start;
}

/* Adjust font size in header for smaller screen sizes. */
@media screen and (max-width: 1114px) {
  h1 {
    font-size: 44px;
  }
  nav ul li {
    font-size: 22px;
  }
}

@media screen and (max-width: 947px) {
  h1 {
    font-size: 38px;
  }
  nav ul li {
    font-size: 19px;
  }
}

@media screen and (max-width: 869px) {
  h1 {
    font-size: 30px;
  }
  nav ul li {
    font-size: 14px;
  }
}

